@startuml

title __RUNNERJAVAFX's Class Diagram__\n

  namespace packageRunner {
    class packageRunner.AnimatedSprite {
    }
  }
  

  namespace packageRunner {
    class packageRunner.Camera {
    }
  }
  

  namespace packageRunner {
    class packageRunner.Spring {
    }
  }
  

  namespace packageRunner {
    class packageRunner.demoRun {
    }
  }
  

  namespace packageRunner {
    abstract class packageRunner.movingThings {
    }
  }
  

  packageRunner.AnimatedSprite -up-|> packageRunner.movingThings
  packageRunner.Camera -up-|> packageRunner.movingThings
  packageRunner.Camera o-- packageRunner.AnimatedSprite : hero
  packageRunner.Spring o-- packageRunner.Camera : camera
  packageRunner.Spring o-- packageRunner.AnimatedSprite : hero
  packageRunner.demoRun -up-|> javafx.application.Application
  packageRunner.demoRun o-- packageRunner.Camera : camera
  packageRunner.demoRun o-- packageRunner.AnimatedSprite : hero


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
